--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family:  sans-serif;
+      font-family: sans-serif;
     }
 
     body {
@@ -262,6 +262,79 @@
       display: none;
     }
 
+    label {
+      color: black;
+      padding-left: 1px;
+      font-size: 14px;
+    }
+
+    /* The popup form - hidden by default */
+    .form-popup {
+      display: none;
+      position: fixed;
+      border-radius: 10px;
+      bottom: 0;
+      right: 15px;
+      border: 3px solid #f1f1f1;
+      z-index: 9;
+      margin-bottom: 30px;
+      margin-right: 20px;
+    }
+
+    /* Add styles to the form container */
+    .form-container {
+      max-width: 240px;
+      padding: 10px;
+      background-color: whitesmoke;
+    }
+
+    /* Full-width input fields */
+    .form-container input[type="text"],
+    .form-container input[type="password"] {
+      width: 100%;
+      padding: 15px;
+      margin: 5px 0 22px 0;
+      border: none;
+      background: #f1f1f1;
+    }
+
+    /* When the inputs get focus, do something */
+    .form-container input[type="text"]:focus,
+    .form-container input[type="password"]:focus {
+      background-color: #ddd;
+      outline: none;
+    }
+
+    /* Set a style for the submit/login button */
+    .form-container .btn {
+      background-color: #04aa6d;
+      color: white;
+      padding: 12px 10px;
+      display: inline;
+      border: none;
+      cursor: pointer;
+      width: 30%;
+      margin: 10px 0 2px 29px;
+      border-radius: 20px;
+      opacity: 0.5;
+    }
+
+    /* Add a red background color to the cancel button */
+    .form-container .cancel {
+      background-color: red;
+    }
+    .form-container .yes {
+      background-color: green;
+    }
+    .form-container .no {
+      background-color: red;
+    }
+
+    /* Add some hover effects to buttons */
+    .form-container .btn:hover,
+    .open-button:hover {
+      opacity: 1;
+    }
 
   </style>
 </head>
@@ -392,6 +465,25 @@
       </div>
     </div>
   </div>
+  <div class="form-popup" id="myForm">
+    <form action="/action_page.php" class="form-container">
+      <label>Are you happy with your products?</label>
+      <button type="button" class="btn yes" onclick="closeForm()">Yes</button>
+      <button type="button" class="btn no" onclick="closeForm()">No</button>
+    </form>
+  </div>
+  <script>
+    function openForm() {
+      document.getElementById("myForm").style.display = "block";
+    }
+    if(boolen){
+      setTimeout("openForm()", 5000);
+    }
+
+    function closeForm() {
+      document.getElementById("myForm").style.display = "none";
+    }
+  </script>
 </div>
 </body>
 </html>
