--- a/src/main/resources/templates/product-list-by-username.html
+++ b/src/main/resources/templates/product-list-by-username.html
@@ -80,7 +80,7 @@
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
         }
         .content-table thead tr {
-            background-color: #ffad06;
+            background-color: #ec3642;
             color: #fff;
             text-align: left;
             font-weight: bold;
@@ -106,7 +106,7 @@
         }
 
         .content-table tbody tr:last-of-type {
-            border-bottom: 2px solid #ffad06;
+            border-bottom: 2px solid #ec3642;
         }
 
     .nav li a{
